ER图优化，展示所有关联表